--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon" href="logo.png">
     <link href="https://fonts.googleapis.com/css2?family=Modak&family=Roboto:ital@1&display=swap" rel="stylesheet">
     <title>Prueba Web Scraping</title>
     <style>
